@@ -35,7 +35,9 @@
   </head>
 
   <body>
+
     <div>
+
       <h4 class="ui dividing header i18n">options.substitutionList</h4>
       <p>
         <div class="ui buttons">
@@ -75,8 +77,11 @@
       </p>
       <div id="listGrid" class="ag-fresh"></div>
     </div>
+
     <div class="ui hidden divider"></div>
+
     <div id="prefs" class="ui form"><!-- not a form to avoid reloading the page with an accidental submit -->
+
       <h4 class="ui dividing header i18n">options.subscription.header</h4>
       <div class="field">
         <div class="ui checkbox">
@@ -105,7 +110,14 @@
         </div>
         <span class="i18n">options.subscription.warning.content</span>
       </div>
+
       <h4 class="ui dividing header i18n">options.otherSettings</h4>
+      <div class="field">
+        <div class="ui checkbox">
+          <input name="enableContextMenu" type="checkbox"></input>
+          <label class="i18n">options.enableContextMenu</label>
+        </div>
+      </div>
       <div class="field">
         <div class="ui checkbox">
           <input name="autoReplaceOnLoad" type="checkbox"></input>
@@ -137,7 +149,9 @@
         </div>
       </div>
     </div>
+
     <div class="ui hidden divider"></div>
+
     <p>
       <button id="save" class="ui positive button">
         <i class="save icon"></i>
